# autoship-cli

./: .bandit  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  LICENSE  PLAN.md  README.ja.md  README.md  README.zh.md  SECURITY.md  TASKS.md  bandit-report.json  mkdocs.yml  performance_architecture_report.md  pyproject.toml  quality_tests_report.md  security_audit_report.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/DISCUSSION_TEMPLATE/: beta-feedback.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_submission.yml  publisher_application.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  e2e.yml  link-check.yml  nightly.yml  plugin_review.yml  release.yml  website.yml
autoship-sdk/: README.md  pyproject.toml
autoship-sdk/src/autoship_sdk/: __init__.py  plugin.py  templates.py  testing.py
autoship-sdk/src/autoship_sdk/templates/plugin/: README.md.tpl  plugin.py.tpl  pyproject.toml.j2  pyproject.toml.tpl
autoship-sdk/tests/: test_plugin.py  test_templates.py  test_testing.py
benchmarks/: benchmark.py
docs/: CODE_OF_CONDUCT.md  LICENSE.md  announcement.md  changelog.md  commands.md  configuration.md  demo-script.sh  demo.md  faq.md  index.md  known-issues.md  models.md  plugin-development.md  plugin-publishing.md  plugins.md  privacy.md  quickstart.md  release-checklist.md  security-audit.md  telemetry.md  troubleshooting.md  why-autoship.md
docs/commands/: audit.md  clean.md  commit.md  config.md  doctor.md  fix.md  index.md  init.md  metrics.md  plugin.md  registry.md  upload.md  verify.md
docs/commands/en/: audit.md  doctor.md  index.md  plugin.md  upload.md
docs/en/: announcement.md  changelog.md  configuration.md  contributing.md  demo.md  faq.md  index.md  known-issues.md  models.md  plugin-development.md  plugin-publishing.md  plugins.md  privacy.md  quickstart.md  release-checklist.md  security-audit.md  security.md  telemetry.md  troubleshooting.md  why-autoship.md
docs/en/commands/: audit.md  clean.md  commit.md  config.md  doctor.md  fix.md  index.md  init.md  metrics.md  plugin.md  registry.md  upload.md  verify.md
docs/ja/: announcement.md  changelog.md  configuration.md  contributing.md  demo.md  faq.md  index.md  known-issues.md  models.md  plugin-development.md  plugin-publishing.md  plugins.md  privacy.md  quickstart.md  release-checklist.md  security-audit.md  security.md  telemetry.md  troubleshooting.md  why-autoship.md
docs/ja/commands/: audit.md  clean.md  commit.md  config.md  doctor.md  fix.md  index.md  init.md  metrics.md  plugin.md  registry.md  upload.md  verify.md
docs/reviews/: p3-1-ai-backend-integration.md  p3-2-upload-integration.md  p3-3-package-distribution.md  p3-4-command-reference.md  p3-5-ci-pipeline.md  p3-6-error-ux.md  p3-7-telemetry-privacy.md  p3-8-plugin-store.md  p4-2-public-docs-site-plan.md
docs/superpowers/plans/: 2026-06-24-dev-team-crisis-simulation.md
docs/superpowers/specs/: 2026-06-24-dev-team-crisis-simulation-design.md  2026-06-24-phase-a-end-to-end-scenario-test-design.md  2026-06-24-phase-b-plugin-ecosystem-stress-test-design.md  2026-06-24-phase-c-fault-injection-drill-design.md
dogfood/: dogfood.py  report.md
dogfood/dev_team_crisis/: __init__.py  phase_d1.py  phase_d2.py  phase_d3.py  run_all.py  runner.py
dogfood/dev_team_crisis/fixtures/commit_policy_plugin/: pyproject.toml
dogfood/dev_team_crisis/fixtures/commit_policy_plugin/src/commit_policy/: __init__.py  locales.py  plugin.py
dogfood/dev_team_crisis/fixtures/commit_policy_plugin/tests/: test_policy.py
dogfood/dev_team_crisis/fixtures/community_echo_plugin/: pyproject.toml
dogfood/dev_team_crisis/fixtures/community_echo_plugin/src/community_echo/: __init__.py  plugin.py
dogfood/dev_team_crisis/fixtures/community_echo_plugin/tests/: test_echo.py
dogfood/real_world/: phase_a.py  phase_b.py  phase_c.py  run_all.py  runner.py
examples/custom-plugin/: README.md  pyproject.toml
examples/custom-plugin/src/autoship_custom_plugin/: __init__.py  plugin.py
examples/custom-plugin/tests/: test_plugin.py
registry/: plugins.json  publishers.json  schema.json
registry-web/: README.md  app.js  dashboard.html  dashboard.js  index.html  package.json  styles.css
registry-web/scripts/: build.js
scripts/: check_i18n_sync.py  release_changelog.py  scan_docs_secrets.py  sync.sh  sync_command_docs.py  validate_registry.py
src/autoship/: __init__.py  __main__.py  exceptions.py  hookspec.py  plugin_manager.py
src/autoship/adapters/: __init__.py  git_adapter.py  model_gateway.py  tool_adapter.py  web_search.py
src/autoship/cli/: __init__.py  main.py
src/autoship/core/: __init__.py  audit_logger.py  cache.py  config_center.py  context.py  fix.py  i18n.py  (+13 more)
tests/: __init__.py  conftest.py  test_audit_logger.py  test_config_center.py  test_context.py  test_exceptions.py  test_hardware_profiler.py  test_hook_dispatcher.py  test_main.py  test_plugin_registry.py  test_project_detector.py  test_release_changelog.py  test_template.py
tests/adapters/: test_azure_openai.py  test_git_adapter.py  test_llama_cpp.py  test_lm_studio.py  test_ollama.py  test_openai.py  test_openrouter.py  test_provider_error_redaction.py  test_tool_adapter.py  test_vllm.py  test_web_search.py
tests/cli/: test_main.py
tests/core/: test_cache.py  test_hook_dispatcher.py  test_i18n.py  test_llm_client.py  test_metrics.py  test_model_router.py  test_package_verifier.py  test_permissions.py  test_plugin_stats.py  test_registry_client.py  test_registry_index.py  test_sandbox.py  test_telemetry.py  test_tool_verifier.py
tests/e2e/: test_end_to_end.py
tests/integration/: __init__.py  pytest.ini  test_e2e_ship.py
tests/plugins/: test_defaults.py  test_docker_ship.py  test_security_scan.py  test_typecheck.py  test_web_search.py
tests/utils/: test_redaction.py
website/: README.md  index.html  index.ja.html  index.zh.html  package.json  plugins.html  plugins.ja.html  plugins.zh.html  robots.txt  styles.css
website/scripts/: build.js
(+76 files in other folders)
