[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoship"]
include = ["src/autoship/locales/*.json"]

[project]
name = "autoship"
version = "1.0.0"
description = "AutoShip-CLI: local-first intelligent delivery assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "AutoShip Team", email = "team@autoship.dev" },
]
keywords = ["cli", "automation", "git", "developer-tools", "local-ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "pluggy>=1.5.0",
    "gitpython>=3.1.42",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "structlog>=24.1.0",
    "psutil>=5.9.0",
    "packaging>=24.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "cryptography>=49.0.0",
    "tomli-w>=1.2.0",
]

[project.optional-dependencies]
ai = ["openai>=1.25.0"]
security = ["bandit[toml]>=1.7.8", "pip-audit>=2.7.0"]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.360",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "responses>=0.25.0",
    "respx>=0.21.0",
    "vcrpy>=6.0.0",
    "pytest-asyncio>=0.23.0",
    "pyfakefs>=5.4.0",
    "freezegun>=1.5.0",
    "cyclonedx-bom>=4.0.0",
    "pyinstaller>=6.0.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-static-i18n>=1.2.0",
    "build>=1.2.0",
    "twine>=5.0.0",
    "autoship-sdk",
]

[project.scripts]
autoship = "autoship.cli.main:cli_entrypoint"

[project.urls]
Homepage = "https://ms33834.github.io/autoship-cli/"
Documentation = "https://ms33834.github.io/autoship-cli/docs"
Repository = "https://github.com/MS33834/autoship-cli"
Issues = "https://github.com/MS33834/autoship-cli/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "TCH"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src", "scripts"]
exclude = ["**/__pycache__", "**/tests"]
venvPath = "."
venv = ".venv"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["tests"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=autoship --cov-report=term-missing --cov-report=xml --cov-fail-under=85"
markers = [
    "integration: tests that require real external services (slow, optional)",
]

[tool.coverage.run]
source = ["src/autoship"]
branch = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603", "B607"]

[tool.uv.workspace]
members = [".", "autoship-sdk"]

[tool.uv.sources]
autoship-sdk = { workspace = true }
