[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoship_sdk"]
include = ["src/autoship_sdk/templates/**/*"]

[project]
name = "autoship-sdk"
version = "1.0.0"
description = "AutoShip plugin development SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "AutoShip Team", email = "team@autoship.dev" },
]
dependencies = [
    "autoship>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.360",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://autoship.dev"
Documentation = "https://docs.autoship.dev"
Repository = "https://github.com/autoship-cli/autoship-cli"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "TCH"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src"]
exclude = ["**/__pycache__", "**/tests"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=autoship_sdk --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["src/autoship_sdk"]
branch = true
