[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoship-project-guard"
version = "0.1.0"
description = "Real-world AutoShip-CLI plugin example: project health checks"
requires-python = ">=3.10"
dependencies = [
    "autoship>=0.2.0b1",
    "autoship-sdk>=0.1.0b1",
]

[project.entry-points."autoship.plugins"]
custom = "autoship_custom_plugin.plugin:register"
