[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoship-community-echo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.entry-points."autoship.plugins"]
community_echo = "community_echo.plugin:register"

[tool.hatch.build.targets.wheel]
packages = ["src/community_echo"]
